fix: scrollbar used to appear on taking cursor to right.

--- a/assets/css/default.css
+++ b/assets/css/default.css
@@ -46,6 +46,7 @@ body {
     line-height: 1.1em;
     color: var(--text-color);
     background: var(--black-color);
+    overflow-x: hidden;
 }
 
 body::before {
